frontend/src/sass/site-layout/_top-players-page.scss
.top-players-page {
  display: grid;

  .nav-side-menu {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
  }

  .main-contents {
    display: flex;
    flex-flow: column;
    gap: 2rem;
  }
  .main-contents > h1 {
    font-size: 2rem;
  }

  input[type='search'] {
    display: none;
  }
  ::placeholder {
    color: #5637ff;
  }

  .userIcon {
    display: none;
  }

  .card-container-wrapper {
    display: flex;
    flex-flow: column;
    gap: 3rem;
  }
  .card-container {
    display: flex;
    flex-flow: column;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    .rankIcon {
      width: 4rem;
      height: 4rem;
    }
  }

  .card {
    margin: auto;
    .card-content {
      align-items: center;
      gap: 0.6rem;
    }
    .avatar {
      margin-bottom: .5rem;
    }
    .winrate-kda-wrapper {
      display: grid;
      grid-template-columns: 1.5fr 1fr;
      #winrate p {
        font-size: 1.1rem;
      }
    }
    .kda-wrapper {
      display: flex;
      flex-flow: column;
      gap: 0.1rem;
      font-size: 0.875rem;
      p:nth-child(2) {
        padding-bottom: 0.6rem;
      }
      p:nth-child(3) {
        font-weight: bold;
      }
    }
    .top-players-personal-skills {
      display: flex;
      flex-flow: column;
      gap: 0.5rem;
      padding: 1.3rem 1.8rem;
      border-bottom-left-radius: 25px;
      border-bottom-right-radius: 25px;
      background: $background-gradient-color;
      font-size: 0.7rem;
    }
    .progressbar-wrapper {
      width: 12rem;
    }
    .label-progressbar-wrapper {
      display: flex;
      flex-flow: column;
      gap: 0.1rem;
    }

    .kda-wrapper p:nth-child(1),
    .winrate-kda-wrapper + p,
    .top-players-personal-skills > p {
      letter-spacing: 0.32em;
      font-size: 0.7rem;
    }
    .button {
      background-color: unset;
      border: 2px solid $primary-color-bright-green;
      color: $primary-color-bright-green;
      font-size: 1rem;
      height: 3.5rem;
      width: 8rem;
      &:hover {
        background: unset;
      }
    }
  }

  .down-icon-container {
    display: flex;
    justify-content: center;
  }
  .table {
    width: 90%;
    td {
      cursor: pointer;
    }
  }
  .table-headline-container h1:nth-child(1) {
    font-size: 2rem;
  }

  .button {
    width: 8.688rem;
    height: 3.313rem;
  }

  // Desktop View
  @media screen and (min-width: 600px) {
    header {
      display: none;
    }
    footer {
      display: none;
    }
  }
  @media screen and (min-width: 1000px) {
    .nav-side-menu {
      display: none;
    }

    .main-contents {
      padding: 3rem;
      position: absolute;
      top: 0;
      right: 0;
      left: 10rem;
    }

    input[type='search'] {
      display: block;
      border-radius: 10px;
      background-color: #19124d;
      border: 1px solid #5637ff;
      width: 300px;
      height: 35px;
      padding-left: 1rem;
    }

    .search-player-component {
      position: relative;
      ::-webkit-scrollbar {
        display: none;
      }

      .search-player-results {
        border: 1px solid #5637ff;
        border-radius: 10px;
        margin-top: 5px;
        overflow: hidden;
        overflow-y: auto;
        max-height: 200px;
        position: absolute;
        width: 100%;
        background-color: #19124d;

        .results-as-buttons {
          background: none;
          border: none;
          cursor: pointer;
          display: flex;
          flex-flow: column nowrap;
          width: 100%;
          color: white;
          padding: 0.5rem 1rem;

          :hover {
            color: $primary-color-bright-green;
          }
        }
      }
    }

    .userIcon {
      display: block;
    }
    .search-userIcon-wrapper {
      display: flex;
      justify-content: space-between;
      align-items: flex-start;
    }

    .main-contents > h1 {
      font-size: 2.5rem;
    }

    .card-container-wrapper {
      flex-flow: row;
      gap: 1rem;
      justify-content: center;
      margin-top: 3rem;
    }
    .card-container:nth-child(1) {
      transform: scale(1.1);
      margin: 0 1rem;
      order: 0;
      margin-bottom: 4.5rem;
    }
    .card-container:nth-child(2) {
      order: -1;
      margin-top: .2rem;
      .card {
        margin: 0;
      }
    }
    .card-container:nth-child(3) {
      order: 1;
      margin-top: .2rem;
      .card {
        margin: 0;
      }
    }
  }
}

